5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/3994/executions/1636_2728.log
== TEST (2019-04-14 11:32:50) 
-- CODE:
p = float(input(" digite o percurso "))
t = input(" A/B?")
if(t==A):
	consumo = float(p/8)
	print(round(consumo,2))
else:
	mensagem = float(p/12)
	print(round(consumo,2))
	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    if(t==A):
NameError: name 'A' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-14 11:33:05) 
-- CODE:
p = float(input(" digite o percurso "))
t = input(" A/B?")
if(t == A):
	consumo = float(p/8)
	print(round(consumo,2))
else:
	mensagem = float(p/12)
	print(round(consumo,2))
	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    if(t == A):
NameError: name 'A' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-14 11:33:41) 
-- CODE:
p = float(input(" digite o percurso "))
t = input(" A/B?")
if(t == "A"):
	consumo = float(p/8)
	print(round(consumo,2))
else:
	mensagem = float(p/12)
	print(round(consumo,2))
	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    print(round(consumo,2))
NameError: name 'consumo' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-14 11:33:50) 
-- CODE:
p = float(input(" digite o percurso "))
t = input(" A/B?")
if(t == "A"):
	consumo = float(p/8)
	print(round(consumo,2))
else:
	mensagem = float(p/12)
	print(round(consumo,2))
	

-- EXECUTION TIME:
0.169077
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1636/2728/main.py", line 8, in <module>
    print(round(consumo,2))
NameError: name 'consumo' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-14 11:34:05) 
-- CODE:
p = float(input(" digite o percurso "))
t = input(" A/B?")
if(t == "A"):
	consumo = float(p/8)
	print(round(consumo,2))
else:
	mensagem = float(p/12)
	print(round(consumo,2))
	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    print(round(consumo,2))
NameError: name 'consumo' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-14 11:34:18) 
-- CODE:
p = float(input(" digite o percurso "))
t = input(" A/B?")
if(t == "A"):
	consumo = float(p/8)
	print(round(consumo,2))
else:
	mensagem = float(p/12)
	print(round(consumo,2))
	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    print(round(consumo,2))
NameError: name 'consumo' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-14 11:34:55) 
-- CODE:
p = float(input(" digite o percurso "))
t = input(" A/B?")
if(t == "A"):
	consumo = float(p/8)
	print(round(consumo,2))
else:
	consumo = float(p/12)
	print(round(consumo,2))
	

-- OUTPUT:
5.42
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-14 11:35:08) 
-- CODE:
p = float(input(" digite o percurso "))
t = input(" A/B?")
if(t == "A"):
	consumo = float(p/8)
	print(round(consumo,2))
else:
	consumo = float(p/12)
	print(round(consumo,2))
	

-- EXECUTION TIME:
0.200404
-- TEST CASE 1:
---- input:
65
B

---- correct output:
5.42
---- user output:
5.42
-- TEST CASE 2:
---- input:
65
A
---- correct output:
8.12
---- user output:
8.12
-- TEST CASE 3:
---- input:
200
A
---- correct output:
25.0
---- user output:
25.0
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
